turn file into csv

--- a/movie_data_based_genre2.ipynb
+++ b/movie_data_based_genre2.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "import os"
+    "import os\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +431,7 @@
        "[364132 rows x 22 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +606,7 @@
        "max    2.675531e+06  9.366622e+08     9.300000  3.560000e+08  2.847246e+09"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +633,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +681,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1080,7 @@
        "[364132 rows x 22 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1532,7 @@
        "[364132 rows x 21 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1978,7 @@
        "[364132 rows x 21 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1985,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2309,7 +2321,7 @@
        "[364132 rows x 14 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2327,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2698,7 +2710,7 @@
        "[364132 rows x 14 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2712,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3036,7 +3048,7 @@
        "[364132 rows x 14 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3053,7 +3065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3363,7 +3375,7 @@
        "[17154 rows x 14 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3376,7 +3388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3700,7 +3712,7 @@
        "[17888 rows x 14 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3712,7 +3724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4036,7 +4048,7 @@
        "[21755 rows x 14 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4048,7 +4060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4372,7 +4384,7 @@
        "[31293 rows x 14 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4384,7 +4396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4694,7 +4706,7 @@
        "[48936 rows x 14 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4706,7 +4718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -5030,7 +5042,7 @@
        "[59229 rows x 14 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5042,7 +5054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -5366,7 +5378,7 @@
        "[31593 rows x 14 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5374,6 +5386,70 @@
    "source": [
     "filtered_data_20_24 = IMDb_Movie_Dataset_df_clean.loc[2020:2024]\n",
     "filtered_data_20_24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                title license  runtime  \\\n",
+      "year                                                                     \n",
+      "0.0                     Untitled Bill Sargent Project       0      0.0   \n",
+      "0.0   Cody - The Stunning Enterprises of Buffalo Bill       0      0.0   \n",
+      "0.0                              We'll Fix It In Post       0      0.0   \n",
+      "0.0                                        Whitney 64       0      0.0   \n",
+      "0.0                    Ambulation Nation I: The Tower       0      0.0   \n",
+      "\n",
+      "                         genre  rating  \\\n",
+      "year                                     \n",
+      "0.0   Biography, Comedy, Drama     0.0   \n",
+      "0.0                  Biography     0.0   \n",
+      "0.0          Biography, Comedy     0.0   \n",
+      "0.0                  Biography     0.0   \n",
+      "0.0                  Biography     0.0   \n",
+      "\n",
+      "                                               director  \\\n",
+      "year                                                      \n",
+      "0.0                                                   0   \n",
+      "0.0                                                   0   \n",
+      "0.0                                            Art Hall   \n",
+      "0.0   Michael Cutt, \\nDon Barnhart, \\nKristofor Swan...   \n",
+      "0.0                                    Meredith Darling   \n",
+      "\n",
+      "                                         star  gross name released writer  \\\n",
+      "year                                                                        \n",
+      "0.0                                         0    0.0    0        0      0   \n",
+      "0.0                                         0    0.0    0        0      0   \n",
+      "0.0   Art Hall, \\nMike Barroga, \\nChris Walls    0.0    0        0      0   \n",
+      "0.0                                         0    0.0    0        0      0   \n",
+      "0.0                          Meredith Darling    0.0    0        0      0   \n",
+      "\n",
+      "      budget  gross company  \n",
+      "year                         \n",
+      "0.0      0.0    0.0       0  \n",
+      "0.0      0.0    0.0       0  \n",
+      "0.0      0.0    0.0       0  \n",
+      "0.0      0.0    0.0       0  \n",
+      "0.0      0.0    0.0       0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(IMDb_Movie_Dataset_df_clean.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMDb_Movie_Dataset_df_clean.to_csv('clean_IMDb_movie_data.csv', index=False)"
    ]
   },
   {
