saving with index = true for year

--- a/Hollywood_Gross.ipynb
+++ b/Hollywood_Gross.ipynb
@@ -3693,6 +3693,15 @@
     "gross_filtered_data_20_24 = highest_gross_movies_df_clean.loc[2020:2024]\n",
     "gross_filtered_data_20_24.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highest_gross_movies_df_clean.to_csv('clean_highest_gross_movies_df_clean..csv', index=True)"
+   ]
   }
  ],
  "metadata": {
