saved with index as true

--- a/movie_data_based_genre2.ipynb
+++ b/movie_data_based_genre2.ipynb
@@ -14,17 +14,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -45,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +227,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364127</th>\n",
+       "      <th>728259</th>\n",
        "      <td>tt27036537</td>\n",
        "      <td>The Beauty of a Woman</td>\n",
        "      <td>NaN</td>\n",
@@ -262,7 +251,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364128</th>\n",
+       "      <th>728260</th>\n",
        "      <td>tt27047718</td>\n",
        "      <td>Armandinho Muito Mais Que O Azul De Zanzibar</td>\n",
        "      <td>2021</td>\n",
@@ -286,7 +275,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364129</th>\n",
+       "      <th>728261</th>\n",
        "      <td>tt27050530</td>\n",
        "      <td>Baraa</td>\n",
        "      <td>NaN</td>\n",
@@ -310,7 +299,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364130</th>\n",
+       "      <th>728262</th>\n",
        "      <td>tt27052307</td>\n",
        "      <td>Maserati: a Racing Life</td>\n",
        "      <td>NaN</td>\n",
@@ -334,7 +323,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364131</th>\n",
+       "      <th>728263</th>\n",
        "      <td>tt27053625</td>\n",
        "      <td>Anwar</td>\n",
        "      <td>NaN</td>\n",
@@ -359,7 +348,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>364132 rows × 22 columns</p>\n",
+       "<p>728264 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -370,11 +359,11 @@
        "3       tt14138650                             The Pale Blue Eye  2022   \n",
        "4       tt15789492                                      Infiesto  2023   \n",
        "...            ...                                           ...   ...   \n",
-       "364127  tt27036537                         The Beauty of a Woman   NaN   \n",
-       "364128  tt27047718  Armandinho Muito Mais Que O Azul De Zanzibar  2021   \n",
-       "364129  tt27050530                                         Baraa   NaN   \n",
-       "364130  tt27052307                       Maserati: a Racing Life   NaN   \n",
-       "364131  tt27053625                                         Anwar   NaN   \n",
+       "728259  tt27036537                         The Beauty of a Woman   NaN   \n",
+       "728260  tt27047718  Armandinho Muito Mais Que O Azul De Zanzibar  2021   \n",
+       "728261  tt27050530                                         Baraa   NaN   \n",
+       "728262  tt27052307                       Maserati: a Racing Life   NaN   \n",
+       "728263  tt27053625                                         Anwar   NaN   \n",
        "\n",
        "       certificate  runtime                     genre rating  \\\n",
        "0              NaN      NaN    Action, Crime, Mystery    NaN   \n",
@@ -383,11 +372,11 @@
        "3                R  128 min    Crime, Horror, Mystery    6.6   \n",
        "4            TV-MA   96 min    Crime, Drama, Thriller    5.5   \n",
        "...            ...      ...                       ...    ...   \n",
-       "364127         NaN      NaN                 Biography    NaN   \n",
-       "364128         NaN   90 min                 Biography    NaN   \n",
-       "364129         NaN      NaN  Biography, Comedy, Drama    NaN   \n",
-       "364130         NaN      NaN                 Biography    NaN   \n",
-       "364131         NaN      NaN                 Biography    NaN   \n",
+       "728259         NaN      NaN                 Biography    NaN   \n",
+       "728260         NaN   90 min                 Biography    NaN   \n",
+       "728261         NaN      NaN  Biography, Comedy, Drama    NaN   \n",
+       "728262         NaN      NaN                 Biography    NaN   \n",
+       "728263         NaN      NaN                 Biography    NaN   \n",
        "\n",
        "                                              description            director  \\\n",
        "0       Dom Toretto and his family are targeted by the...     Louis Leterrier   \n",
@@ -396,11 +385,11 @@
        "3       A world-weary detective is hired to investigat...        Scott Cooper   \n",
        "4       Two detectives are called to a small mining to...       Patxi Amezcua   \n",
        "...                                                   ...                 ...   \n",
-       "364127  In 1966 France, actress Audrey Hepburn navigat...                 NaN   \n",
-       "364128                                         Add a Plot      Daniel Talento   \n",
-       "364129  Baraa is a half-Bahraini half-Saudi man who ha...   Loay cielo Tattan   \n",
-       "364130  Explores the family that is responsible for th...                 NaN   \n",
-       "364131  The life of the Bahraini actor \"Anwar Ahmed\" i...   Loay cielo Tattan   \n",
+       "728259  In 1966 France, actress Audrey Hepburn navigat...                 NaN   \n",
+       "728260                                         Add a Plot      Daniel Talento   \n",
+       "728261  Baraa is a half-Bahraini half-Saudi man who ha...   Loay cielo Tattan   \n",
+       "728262  Explores the family that is responsible for th...                 NaN   \n",
+       "728263  The life of the Bahraini actor \"Anwar Ahmed\" i...   Loay cielo Tattan   \n",
        "\n",
        "              director_id  ...     votes gross(in $)  name  released score  \\\n",
        "0        /name/nm0504642/  ...       NaN         NaN   NaN       NaN   NaN   \n",
@@ -409,11 +398,11 @@
        "3        /name/nm0178376/  ...   85087.0         NaN   NaN       NaN   NaN   \n",
        "4        /name/nm0025538/  ...    2081.0         NaN   NaN       NaN   NaN   \n",
        "...                   ...  ...       ...         ...   ...       ...   ...   \n",
-       "364127                NaN  ...       NaN         NaN   NaN       NaN   NaN   \n",
-       "364128   /name/nm2017349/  ...       NaN         NaN   NaN       NaN   NaN   \n",
-       "364129  /name/nm14517689/  ...       NaN         NaN   NaN       NaN   NaN   \n",
-       "364130                NaN  ...       NaN         NaN   NaN       NaN   NaN   \n",
-       "364131  /name/nm14517689/  ...       NaN         NaN   NaN       NaN   NaN   \n",
+       "728259                NaN  ...       NaN         NaN   NaN       NaN   NaN   \n",
+       "728260   /name/nm2017349/  ...       NaN         NaN   NaN       NaN   NaN   \n",
+       "728261  /name/nm14517689/  ...       NaN         NaN   NaN       NaN   NaN   \n",
+       "728262                NaN  ...       NaN         NaN   NaN       NaN   NaN   \n",
+       "728263  /name/nm14517689/  ...       NaN         NaN   NaN       NaN   NaN   \n",
        "\n",
        "       writer  country budget gross  company  \n",
        "0         NaN      NaN    NaN   NaN      NaN  \n",
@@ -422,16 +411,16 @@
        "3         NaN      NaN    NaN   NaN      NaN  \n",
        "4         NaN      NaN    NaN   NaN      NaN  \n",
        "...       ...      ...    ...   ...      ...  \n",
-       "364127    NaN      NaN    NaN   NaN      NaN  \n",
-       "364128    NaN      NaN    NaN   NaN      NaN  \n",
-       "364129    NaN      NaN    NaN   NaN      NaN  \n",
-       "364130    NaN      NaN    NaN   NaN      NaN  \n",
-       "364131    NaN      NaN    NaN   NaN      NaN  \n",
+       "728259    NaN      NaN    NaN   NaN      NaN  \n",
+       "728260    NaN      NaN    NaN   NaN      NaN  \n",
+       "728261    NaN      NaN    NaN   NaN      NaN  \n",
+       "728262    NaN      NaN    NaN   NaN      NaN  \n",
+       "728263    NaN      NaN    NaN   NaN      NaN  \n",
        "\n",
-       "[364132 rows x 22 columns]"
+       "[728264 rows x 22 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5445,11 +5434,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMDb_Movie_Dataset_df_clean.to_csv('clean_IMDb_movie_data.csv', index=False)"
+    "IMDb_Movie_Dataset_df_clean.to_csv('clean_IMDb_movie_data.csv', index=True)"
    ]
   },
   {
