--- a/combined_data_cleaned.ipynb
+++ b/combined_data_cleaned.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bp/ghj2hg8n63ngp97nh99m0cr80000gn/T/ipykernel_6605/1479627001.py:3: DtypeWarning: Columns (8,9,10,13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/bp/ghj2hg8n63ngp97nh99m0cr80000gn/T/ipykernel_6623/1479627001.py:3: DtypeWarning: Columns (8,9,10,13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  cleaned_IMDb_df = pd.read_csv(cleaned_IMDb)\n"
      ]
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,62 +171,216 @@
        "      <td>2006-12-05</td>\n",
        "      <td>136</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>146</td>\n",
+       "      <td>Spider-Man: Across the Spider-Verse</td>\n",
+       "      <td>Miles Morales catapults across the Multiverse,...</td>\n",
+       "      <td>Columbia Pictures</td>\n",
+       "      <td>312023.0</td>\n",
+       "      <td>120663589.0</td>\n",
+       "      <td>381311319.0</td>\n",
+       "      <td>308499543.0</td>\n",
+       "      <td>689810862.0</td>\n",
+       "      <td>['Action', 'Adventure', 'Sci-Fi', 'Thriller']</td>\n",
+       "      <td>2 hr 22 min</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>2012-03-08</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>138</td>\n",
+       "      <td>Fast X</td>\n",
+       "      <td>Dom Toretto and his family are targeted by the...</td>\n",
+       "      <td>Universal Pictures</td>\n",
+       "      <td>272023.0</td>\n",
+       "      <td>67017410.0</td>\n",
+       "      <td>145960660.0</td>\n",
+       "      <td>558749000.0</td>\n",
+       "      <td>704709660.0</td>\n",
+       "      <td>['Action', 'Adventure', 'Sci-Fi']</td>\n",
+       "      <td>2 hr 24 min</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>2007-06-28</td>\n",
+       "      <td>144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>872</td>\n",
+       "      <td>The Nun II</td>\n",
+       "      <td>1956 - France. A priest is murdered. An evil i...</td>\n",
+       "      <td>Warner Bros.</td>\n",
+       "      <td>62023.0</td>\n",
+       "      <td>32603336.0</td>\n",
+       "      <td>69222000.0</td>\n",
+       "      <td>135000000.0</td>\n",
+       "      <td>204222000.0</td>\n",
+       "      <td>['Action', 'Comedy']</td>\n",
+       "      <td>1 hr 53 min</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>2008-06-05</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>195</td>\n",
+       "      <td>The Little Mermaid</td>\n",
+       "      <td>A young mermaid makes a deal with a sea witch ...</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>42023.0</td>\n",
+       "      <td>95578040.0</td>\n",
+       "      <td>298172056.0</td>\n",
+       "      <td>271420242.0</td>\n",
+       "      <td>569592298.0</td>\n",
+       "      <td>['Drama', 'Romance', 'Thriller']</td>\n",
+       "      <td>2 hr 5 min</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2015-02-11</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>943</td>\n",
+       "      <td>Insidious: The Red Door</td>\n",
+       "      <td>The Lamberts must go deeper into The Further t...</td>\n",
+       "      <td>Screen Gems</td>\n",
+       "      <td>52023.0</td>\n",
+       "      <td>33013036.0</td>\n",
+       "      <td>82156962.0</td>\n",
+       "      <td>106341657.0</td>\n",
+       "      <td>188498619.0</td>\n",
+       "      <td>['Action', 'Adventure', 'Thriller']</td>\n",
+       "      <td>1 hr 42 min</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1988-05-25</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1000 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                            title  \\\n",
-       "0         966  Snow White and the Seven Dwarfs   \n",
-       "1         344               Gone with the Wind   \n",
-       "2         615                            Bambi   \n",
-       "3         802   One Hundred and One Dalmatians   \n",
-       "4         856                  The Jungle Book   \n",
+       "     Unnamed: 0                                title  \\\n",
+       "0           966      Snow White and the Seven Dwarfs   \n",
+       "1           344                   Gone with the Wind   \n",
+       "2           615                                Bambi   \n",
+       "3           802       One Hundred and One Dalmatians   \n",
+       "4           856                      The Jungle Book   \n",
+       "..          ...                                  ...   \n",
+       "995         146  Spider-Man: Across the Spider-Verse   \n",
+       "996         138                               Fast X   \n",
+       "997         872                           The Nun II   \n",
+       "998         195                   The Little Mermaid   \n",
+       "999         943              Insidious: The Red Door   \n",
        "\n",
-       "                                          Movie Info  \\\n",
-       "0  Exiled into the dangerous forest by her wicked...   \n",
-       "1  A sheltered and manipulative Southern belle an...   \n",
-       "2  The story of a young deer growing up in the fo...   \n",
-       "3  When a litter of Dalmatian puppies are abducte...   \n",
-       "4  Bagheera the Panther and Baloo the Bear have a...   \n",
+       "                                            Movie Info  \\\n",
+       "0    Exiled into the dangerous forest by her wicked...   \n",
+       "1    A sheltered and manipulative Southern belle an...   \n",
+       "2    The story of a young deer growing up in the fo...   \n",
+       "3    When a litter of Dalmatian puppies are abducte...   \n",
+       "4    Bagheera the Panther and Baloo the Bear have a...   \n",
+       "..                                                 ...   \n",
+       "995  Miles Morales catapults across the Multiverse,...   \n",
+       "996  Dom Toretto and his family are targeted by the...   \n",
+       "997  1956 - France. A priest is murdered. An evil i...   \n",
+       "998  A young mermaid makes a deal with a sea witch ...   \n",
+       "999  The Lamberts must go deeper into The Further t...   \n",
        "\n",
-       "                           Distributor       budget  Domestic Opening (in $)  \\\n",
-       "0  Walt Disney Studios Motion Pictures     211937.0                1499000.0   \n",
-       "1            Metro-Goldwyn-Mayer (MGM)  130000000.0                 151939.0   \n",
-       "2                   RKO Radio Pictures  150000000.0                 211942.0   \n",
-       "3  Walt Disney Studios Motion Pictures   62000000.0                 251961.0   \n",
-       "4  Walt Disney Studios Motion Pictures   85000000.0                 181967.0   \n",
+       "                             Distributor       budget  \\\n",
+       "0    Walt Disney Studios Motion Pictures     211937.0   \n",
+       "1              Metro-Goldwyn-Mayer (MGM)  130000000.0   \n",
+       "2                     RKO Radio Pictures  150000000.0   \n",
+       "3    Walt Disney Studios Motion Pictures   62000000.0   \n",
+       "4    Walt Disney Studios Motion Pictures   85000000.0   \n",
+       "..                                   ...          ...   \n",
+       "995                    Columbia Pictures     312023.0   \n",
+       "996                   Universal Pictures     272023.0   \n",
+       "997                         Warner Bros.      62023.0   \n",
+       "998  Walt Disney Studios Motion Pictures      42023.0   \n",
+       "999                          Screen Gems      52023.0   \n",
        "\n",
-       "   Domestic Sales (in $)  International Sales (in $)        gross  \\\n",
-       "0            184925486.0                 184925486.0  184928542.0   \n",
-       "1            200882193.0                 201500000.0  402382193.0   \n",
-       "2            102247150.0                 165200000.0  267447150.0   \n",
-       "3            144880014.0                  71000000.0  215880014.0   \n",
-       "4            141843612.0                  64000000.0  205843612.0   \n",
+       "     Domestic Opening (in $)  Domestic Sales (in $)  \\\n",
+       "0                  1499000.0            184925486.0   \n",
+       "1                   151939.0            200882193.0   \n",
+       "2                   211942.0            102247150.0   \n",
+       "3                   251961.0            144880014.0   \n",
+       "4                   181967.0            141843612.0   \n",
+       "..                       ...                    ...   \n",
+       "995              120663589.0            381311319.0   \n",
+       "996               67017410.0            145960660.0   \n",
+       "997               32603336.0             69222000.0   \n",
+       "998               95578040.0            298172056.0   \n",
+       "999               33013036.0             82156962.0   \n",
        "\n",
-       "                                               genre      runtime license  \\\n",
-       "0                    ['Drama', 'Musical', 'Romance']   2 hr 7 min   PG-13   \n",
-       "1                 ['Adventure', 'Mystery', 'Sci-Fi']   2 hr 4 min       R   \n",
-       "2  ['Action', 'Drama', 'Mystery', 'Sci-Fi', 'Thri...  2 hr 44 min       R   \n",
-       "3           ['Action', 'Crime', 'Drama', 'Thriller']  2 hr 21 min   PG-13   \n",
-       "4                              ['Comedy', 'Romance']  2 hr 16 min   PG-13   \n",
+       "     International Sales (in $)        gross  \\\n",
+       "0                   184925486.0  184928542.0   \n",
+       "1                   201500000.0  402382193.0   \n",
+       "2                   165200000.0  267447150.0   \n",
+       "3                    71000000.0  215880014.0   \n",
+       "4                    64000000.0  205843612.0   \n",
+       "..                          ...          ...   \n",
+       "995                 308499543.0  689810862.0   \n",
+       "996                 558749000.0  704709660.0   \n",
+       "997                 135000000.0  204222000.0   \n",
+       "998                 271420242.0  569592298.0   \n",
+       "999                 106341657.0  188498619.0   \n",
        "\n",
-       "  release_date  runtime_minutes  \n",
-       "0   2001-05-18              127  \n",
-       "1   2012-05-30              124  \n",
-       "2   2017-10-04              164  \n",
-       "3   1994-08-05              141  \n",
-       "4   2006-12-05              136  "
+       "                                                 genre      runtime license  \\\n",
+       "0                      ['Drama', 'Musical', 'Romance']   2 hr 7 min   PG-13   \n",
+       "1                   ['Adventure', 'Mystery', 'Sci-Fi']   2 hr 4 min       R   \n",
+       "2    ['Action', 'Drama', 'Mystery', 'Sci-Fi', 'Thri...  2 hr 44 min       R   \n",
+       "3             ['Action', 'Crime', 'Drama', 'Thriller']  2 hr 21 min   PG-13   \n",
+       "4                                ['Comedy', 'Romance']  2 hr 16 min   PG-13   \n",
+       "..                                                 ...          ...     ...   \n",
+       "995      ['Action', 'Adventure', 'Sci-Fi', 'Thriller']  2 hr 22 min   PG-13   \n",
+       "996                  ['Action', 'Adventure', 'Sci-Fi']  2 hr 24 min   PG-13   \n",
+       "997                               ['Action', 'Comedy']  1 hr 53 min   PG-13   \n",
+       "998                   ['Drama', 'Romance', 'Thriller']   2 hr 5 min       R   \n",
+       "999                ['Action', 'Adventure', 'Thriller']  1 hr 42 min       0   \n",
+       "\n",
+       "    release_date  runtime_minutes  \n",
+       "0     2001-05-18              127  \n",
+       "1     2012-05-30              124  \n",
+       "2     2017-10-04              164  \n",
+       "3     1994-08-05              141  \n",
+       "4     2006-12-05              136  \n",
+       "..           ...              ...  \n",
+       "995   2012-03-08              142  \n",
+       "996   2007-06-28              144  \n",
+       "997   2008-06-05              113  \n",
+       "998   2015-02-11              125  \n",
+       "999   1988-05-25              102  \n",
+       "\n",
+       "[1000 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#DISPLAY Highest df\n",
-    "cleaned_highest_df.head()"
+    "cleaned_highest_df"
    ]
   }
  ],
